--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shea Binkley - Ping Pong Game</title>
     <link rel="stylesheet" href="style.css">
-
 </head>
     <body>
+        <div class="title"><h1>Ping Pong</h1></div>
         <button id="startButton">Press to Play</button>
         <button id="newGameButton">Press to Start New Game</button>
         <div class="board">
